# espetofc_api

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/crud/: caixa.py  categoria.py  combo.py  item.py  pedido.py  pedido_combo.py  produto.py  transacao.py  usuario.py
app/db/: base.py  session.py
app/models/: caixa.py  categoria.py  combo.py  combo_produto.py  item.py  movimentacao_estoque.py  pedido.py  pedido_combo.py  pedido_combo_produto.py  produto.py  transacao.py  usuario.py
app/schemas/: caixa.py  categoria.py  combo.py  combo_produto.py  item.py  movimentacao_estoque.py  pedido.py  pedido_combo.py  pedido_combo_produto.py  produto.py  token.py  transacao.py  usuario.py
migrations/: env.py
migrations/versions/: 05d03be64fa6_add_tables_insert_combo_in_pedido.py  0a5c92425db0_add_tables_insert_combo_in_pedido_2.py  17cf7f8ffc44_remove_created_at_to_categoria.py  1a53fdc9de2f_add_field_observacao_to_pedido.py  25765a658d51_add_mapper_to_usuarios_table_2.py  2a425d6c8573_correct_fields_to_insert_pedido_combo.py  3004064964cb_first_commit.py  4075b82f2321_add_tables_caixas_and_transacoes.py  6291a3d8e44d_add_items_table.py  7af4ada85645_add_mapper_to_usuarios_table_3.py  7c952ee6673f_adjust_table_pedidos_and_transacao.py  8e895763969f_add_relationship_produtos_in_categoria.py  9ac08acd698f_specify_foreign_keys_for_produtos_and_.py  a28ec6b0f236_add_mapper_to_usuarios_table_4.py  a48a3ca8271b_ajust_to_relationship_items.py  a5fd2c5a2add_add_movimentacao_estoque_table.py  (+8 more)
(+13 files in other folders)
